futex.2: Add some subsection headings
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -61,7 +61,8 @@ As these semantics involve writing nonportable assembly instructions
 (see the example library referred to in SEE ALSO),
 this in turn probably means that most users will in fact be
 library authors and not general application developers.
-.PP
+.\"
+.SS Arguments
 The
 .I uaddr
 argument points to an integer which stores the counter (futex).
@@ -104,7 +105,10 @@ argument is a pointer to a second futex that is employed by the operation.
 The interpretation of the final integer argument,
 .IR val3 ,
 depends on the operation.
-
+.\"
+.\""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+.\"
+.SS Futex operations
 The
 .I futex_op
 argument consists of two parts:
