futex.2: Note that the kernel only "knows" about a futex in the contended case
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -46,7 +46,16 @@ This system call is typically used to
 implement the contended case of a lock in shared memory, as
 described in
 .BR futex (7).
-.PP
+
+In the uncontended case,
+all operations on the futex memory location are performed
+in user space using atomic machine-language instructions,
+and the kernel maintains no information about the futex.
+The kernel allocates state information for the futex only
+in the contended case, when operations such as
+.BR FUTEX_WAIT ,
+described below, are performed.
+
 When a futex operation did not finish uncontended in user space, a
 .BR futex ()
 call needs to be made to the kernel to arbitrate.
