--- a/man2/futex.2
+++ b/man2/futex.2
@@ -727,7 +727,7 @@ that the kernel will update the futex value prior
 to returning to user space.
 Unlike the other futex operations described above,
 the PI futex operations are designed
-for the implementation of very specific IPC mechanisms).
+for the implementation of very specific IPC mechanisms.
 .\"
 .\" FIXME We don't quite have a definition anywhere of what a PI futex
 .\"       is (vs a non-PI futex). Below, we have the information that
