--- a/man2/futex.2
+++ b/man2/futex.2
@@ -736,11 +736,12 @@ for the implementation of very specific IPC mechanisms.
 .\"       kind of the other? We should have such a definition somewhere
 .\"       about here.
 .\"
-.\" FIXME In discussing errors for FUTEX_CMP_REQUEUE_PI, Darren Hart
+.\" FIXME XXX In discussing errors for FUTEX_CMP_REQUEUE_PI, Darren Hart
 .\"       made the observation that "EINVAL is returned if the non-pi 
 .\"       to pi or op pairing semantics are violated."
 .\"       Probably there needs to be a general statement about this
 .\"       requirement, probably located at about this point in the page.
+.\"       Darren, care to take a shot at this?
 .\"
 .\" FIXME Somewhere on this page (I guess under the discussion of PI
 .\"       futexes) we need a discussion of the FUTEX_OWNER_DIED bit.
