mbtowc.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/mbtowc.3
+++ b/man3/mbtowc.3
@@ -120,7 +120,7 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR mbtowc ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race
 .TE
 .SH CONFORMING TO
 C99.
