gamma.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/gamma.3
+++ b/man3/gamma.3
@@ -74,7 +74,7 @@ T{
 .BR gamma (),
 .BR gammaf (),
 .BR gammal ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:signgam
 .TE
 .SH CONFORMING TO
 Because of historical variations in behavior across systems,
