getopt.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/getopt.3
+++ b/man3/getopt.3
@@ -327,7 +327,7 @@ T{
 .BR getopt (),
 .BR getopt_long (),
 .BR getopt_long_only ()
-T}	Thread safety	MT-Unsafe env
+T}	Thread safety	MT-Unsafe race:getopt env
 .TE
 .SH CONFORMING TO
 .TP
