--- a/man3/siginterrupt.3
+++ b/man3/siginterrupt.3
@@ -94,7 +94,7 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR siginterrupt ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe const:sigintr
 .TE
 .SH CONFORMING TO
 4.3BSD, POSIX.1-2001.
