makecontext.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/makecontext.3
+++ b/man3/makecontext.3
@@ -107,13 +107,15 @@ For an explanation of the terms used in this section, see
 .BR attributes (7).
 .TS
 allbox;
-lbw28 lb lb
+lb lb lb
 l l l.
 Interface	Attribute	Value
 T{
-.BR makecontext (),
+.BR makecontext ()
+T}	Thread safety	MT-Safe race:ucp
+T{
 .BR swapcontext ()
-T}	Thread safety	MT-Safe
+T}	Thread safety	MT-Safe race:oucp race:ucp
 .TE
 .SH CONFORMING TO
 SUSv2, POSIX.1-2001.
