ctermid.3: Modify thread-safety information
According to the change of source code, ctermid's leve has been changed
from MT-Unsafe to MT-Safe.
Ater modifing, the marking matches glibc marking.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/ctermid.3
+++ b/man3/ctermid.3
@@ -68,7 +68,7 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR ctermid ()
-T}	Thread safety	MT-Unsafe race:ctermid/!s
+T}	Thread safety	MT-Safe
 .TE
 .SH CONFORMING TO
 Svr4, POSIX.1-2001.
