drand48_r.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/drand48_r.3
+++ b/man3/drand48_r.3
@@ -114,7 +114,7 @@ T{
 .BR srand48_r (),
 .BR seed48_r (),
 .BR lcong48_r ()
-T}	Thread safety	MT-Safe
+T}	Thread safety	MT-Safe race:buffer
 .TE
 .ad
 .SH CONFORMING TO
