futex.2: Remove FUTEX_REQUEUE EINVAL error case
Thomas Gleixner confirmed my reading that this case does
not apply.

Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -1263,14 +1263,7 @@ The bitset supplied in
 is zero.
 .TP
 .B EINVAL
-.RB ( FUTEX_REQUEUE ,
-.\" FIXME XXX tglx suggested adding this, but does this error really occur for
-.\"       FUTEX_REQUEUE? (The case where it occurs for FUTEX_CMP_REQUEUE_PI
-.\"       is obvious at the start of futex_requeue().)
-.\"       Darren Hart seems to agree with me that it does not occur for
-.\"       FUTEX_REQUEUE. If Darren and I turn out to be wrong, then 
-.\"       FUTEX_CMP_REQUEUE probably also needs to be added here.
-.BR FUTEX_CMP_REQUEUE_PI )
+.RB ( FUTEX_CMP_REQUEUE_PI )
 .I uaddr
 equals
 .IR uaddr2
