hsearch.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/hsearch.3
+++ b/man3/hsearch.3
@@ -233,19 +233,21 @@ For an explanation of the terms used in this section, see
 .BR attributes (7).
 .TS
 allbox;
-lbw38 lb lb
+lbw25 lb lb
 l l l.
 Interface	Attribute	Value
 T{
 .BR hcreate (),
 .BR hsearch (),
+.br
 .BR hdestroy ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:hsearch
 T{
 .BR hcreate_r (),
 .BR hsearch_r (),
+.br
 .BR hdestroy_r ()
-T}	Thread safety	MT-Safe
+T}	Thread safety	MT-Safe race:htab
 .TE
 .SH CONFORMING TO
 The functions
