--- a/man3/getpwnam.3
+++ b/man3/getpwnam.3
@@ -219,17 +219,20 @@ For an explanation of the terms used in this section, see
 .BR attributes (7).
 .TS
 allbox;
-lbw26 lb lb
+lb lb lb
 l l l.
 Interface	Attribute	Value
 T{
-.BR getpwnam (),
+.BR getpwnam ()
+T}	Thread safety	MT-Unsafe race:pwnam locale
+T{
 .BR getpwuid ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:pwuid locale
 T{
 .BR getpwnam_r (),
+.br
 .BR getpwuid_r ()
-T}	Thread safety	MT-Safe
+T}	Thread safety	MT-Safe locale
 .TE
 .SH CONFORMING TO
 SVr4, 4.3BSD, POSIX.1-2001.
