getgrnam.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/getgrnam.3
+++ b/man3/getgrnam.3
@@ -213,17 +213,20 @@ For an explanation of the terms used in this section, see
 .BR attributes (7).
 .TS
 allbox;
-lbw26 lb lb
+lb lb lb
 l l l.
 Interface	Attribute	Value
 T{
-.BR getgrnam (),
+.BR getgrnam ()
+T}	Thread safety	MT-Unsafe race:grnam locale
+T{
 .BR getgrgid ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:grgid locale
 T{
 .BR getgrnam_r (),
+.br
 .BR getgrgid_r ()
-T}	Thread safety	MT-Safe
+T}	Thread safety	MT-Safe locale
 .TE
 .SH CONFORMING TO
 SVr4, 4.3BSD, POSIX.1-2001.
