--- a/man3/termios.3
+++ b/man3/termios.3
@@ -979,15 +979,14 @@ For an explanation of the terms used in this section, see
 .TS
 allbox;
 lb lb lb
-lw37 l l.
+l l l.
 Interface	Attribute	Value
 T{
 .BR tcgetattr (),
 .BR tcsetattr (),
-.BR tcsendbreak (),
 .BR tcdrain (),
+.br
 .BR tcflush (),
-.BR tcflow (),
 .BR cfmakeraw (),
 .BR cfgetispeed (),
 .BR cfgetospeed (),
@@ -995,6 +994,10 @@ T{
 .BR cfsetospeed (),
 .BR cfsetspeed ()
 T}	Thread safety	MT-Safe
+T{
+.BR tcsendbreak (),
+.BR tcflow ()
+T}	Thread safety	MT-Unsafe race:tcattr(filedes)/bsd
 .TE
 .ad
 .hy
