termios.3: Modify thread-safety information
As this is man page for Linux, we don't need thread safety information
for bsd

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/termios.3
+++ b/man3/termios.3
@@ -984,9 +984,12 @@ Interface	Attribute	Value
 T{
 .BR tcgetattr (),
 .BR tcsetattr (),
+.BR tcsendbreak (),
 .BR tcdrain (),
 .br
 .BR tcflush (),
+.br
+.BR tcflow (),
 .BR cfmakeraw (),
 .BR cfgetispeed (),
 .BR cfgetospeed (),
@@ -994,10 +997,6 @@ T{
 .BR cfsetospeed (),
 .BR cfsetspeed ()
 T}	Thread safety	MT-Safe
-T{
-.BR tcsendbreak (),
-.BR tcflow ()
-T}	Thread safety	MT-Unsafe race:tcattr(filedes)/bsd
 .TE
 .ad
 .hy
