--- a/man3/termios.3
+++ b/man3/termios.3
@@ -978,18 +978,16 @@ For an explanation of the terms used in this section, see
 .ad l
 .TS
 allbox;
-lb lb lb
+lbw36 lb lb
 l l l.
 Interface	Attribute	Value
 T{
 .BR tcgetattr (),
 .BR tcsetattr (),
-.BR tcsendbreak (),
 .BR tcdrain (),
-.br
 .BR tcflush (),
-.br
 .BR tcflow (),
+.BR tcsendbreak (),
 .BR cfmakeraw (),
 .BR cfgetispeed (),
 .BR cfgetospeed (),
