--- a/man3/exp.3
+++ b/man3/exp.3
@@ -130,7 +130,7 @@ For an explanation of the terms used in this section, see
 .BR attributes (7).
 .TS
 allbox;
-lb lb lb
+lbw21 lb lb
 l l l.
 Interface	Attribute	Value
 T{
