futex.2: srcfix: FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -12,6 +12,10 @@
 .\" Modified 2004-06-17 mtk
 .\" Modified 2004-10-07 aeb, added FUTEX_REQUEUE, FUTEX_CMP_REQUEUE
 .\"
+.\" FIXME Still to integrate are some points from Torvald Riegel's mail of
+.\"       2015-01-23:
+.\"       http://thread.gmane.org/gmane.linux.kernel/1703405/focus=7977
+.\"
 .TH FUTEX 2 2014-05-21 "Linux" "Linux Programmer's Manual"
 .SH NAME
 futex \- fast user-space locking
