--- a/man2/futex.2
+++ b/man2/futex.2
@@ -689,8 +689,9 @@ and
 .\"     around it to use it properly (this is what a PI pthread_mutex is).
 
 .\" FIXME XXX ===== Start of adapted Hart/Guniguntala text =====
-.\"       The following text is drawn from the Hart/Guniguntala paper,
-.\"       but I have reworded some pieces significantly. Please check it.
+.\"       The following text is drawn from the Hart/Guniguntala paper
+.\"       (listed in SEE ALSO), but I have reworded some pieces
+.\"       significantly. Please check it.
 .\"
 The PI futex operations described below differ from the other
 futex operations in that they impose policy on the use of the futex value:
@@ -747,7 +748,7 @@ before the calling thread returns to user space.
 
 It is important to note
 .\" FIXME We need some explanation here of *why* it is important to
-.\"       note this
+.\"       note this. Can someone explain?
 that the kernel will update the futex value prior
 to returning to user space.
 Unlike the other futex operations described above,
@@ -947,7 +948,7 @@ arguments serve the same purposes as for
 .\" commit 52400ba946759af28442dee6265c5c0180ac7122
 .\"
 .\" FIXME I find the next sentence (from tglx) pretty hard to grok.
-.\"       Could someone explain it a bit more.
+.\"       Could someone explain it a bit more?
 Wait operation to wait on a non-PI futex at
 .I uaddr
 and potentially be requeued onto a PI futex at
@@ -1009,14 +1010,15 @@ of the requeue that takes place in the
 operation.
 .\"
 .\" Darren Hart notes that a patch to allow glibc to fully support
-.\" PI-aware pthreds condition variables has not yet been accepted into
+.\" PI-aware pthreads condition variables has not yet been accepted into
 .\" glibc. The story is complex, and can be found at
 .\" https://sourceware.org/bugzilla/show_bug.cgi?id=11588
 .\" Darren notes that in the meantime, the patch is shipped with various
-.\" PREEMPT_RT enabled Linux systems.
+.\" PREEMPT_RT-enabled Linux systems.
 .\"
 .\" Related to the preceding, Darren proposed that somewhere, man-pages
 .\" should document the following point:
+.\"
 .\"       While the Linux kernel, since 2.6.31, supports requeueing of
 .\"       priority-inheritance (PI) aware mutexes via the
 .\"       FUTEX_WAIT_REQUEUE_PI and FUTEX_CMP_REQUEUE_PI futex operations,
@@ -1028,8 +1030,9 @@ operation.
 .\"       pthread_mutex with a condvar during a pthread_cond*_wait
 .\"       operation. For this reason, it is not recommended to rely on
 .\"       priority inheritance when using pthread condition variables.
-.\" The problem is that the obvious somewhere to place this text
-.\" is the pthread_cond*wait(3) man page. However, such a man page
+.\"
+.\" The problem is that the obvious location for this text is
+.\" the pthread_cond*wait(3) man page. However, such a man page
 .\" does not currently exist.
 .\"
 .\""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
