futex.2: srcfix: FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -16,6 +16,9 @@
 .\"       2015-01-23:
 .\"       http://thread.gmane.org/gmane.linux.kernel/1703405/focus=7977
 .\"
+.\" FIXME Do we need add some text regarding Torvald Riegel's 2015-01-24 mail
+.\"       at http://thread.gmane.org/gmane.linux.kernel/1703405/focus=1873242
+.\"
 .TH FUTEX 2 2014-05-21 "Linux" "Linux Programmer's Manual"
 .SH NAME
 futex \- fast user-space locking
