--- a/man3/btowc.3
+++ b/man3/btowc.3
@@ -46,6 +46,18 @@ If \fIc\fP is
 or not a valid multibyte sequence of length 1,
 it returns
 .BR WEOF .
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR btowc ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 .SH NOTES
