cfree.3: ATTRIBUTES: Note function that is thread-safe
The function cfree() in glibc is thread safe.
It's marking matches glibc marking.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/cfree.3
+++ b/man3/cfree.3
@@ -109,6 +109,18 @@ was not a pointer to a block previously allocated by
 one of the routines in the
 .BR malloc (3)
 family.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR cfree ()
+T}	Thread safety	MT-Safe /* In glibc */
+.TE
 .SH CONFORMING TO
 The 3-argument version of
 .BR cfree ()
