clog10.3: ATTRIBUTES: Note functions that are thread-safe
The functions clog10(), clog10f() and clog10l() in glibc are thread safe.
It's markings match glibc markings.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/clog10.3
+++ b/man3/clog10.3
@@ -34,6 +34,20 @@ Note that
 close to zero will cause an overflow.
 .SH VERSIONS
 These functions first appeared in glibc in version 2.1.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw30 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR clog10 (),
+.BR clog10f (),
+.BR clog10l ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 This function is a GNU extension.
 It is reserved for future use in C99.
