closedir.3: ATTRIBUTES: Note function that is thread-safe
The function closedir() in glibc is thread safe.
It's marking matches glibc marking.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/closedir.3
+++ b/man3/closedir.3
@@ -64,6 +64,18 @@ is set appropriately.
 .B EBADF
 Invalid directory stream descriptor
 .IR dirp .
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR closedir ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4, POSIX.1-2001, 4.3BSD.
 .SH SEE ALSO
