--- a/man3/cpow.3
+++ b/man3/cpow.3
@@ -30,6 +30,20 @@ raised to the power
 along the negative real axis.)
 .SH VERSIONS
 These functions first appeared in glibc in version 2.1.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw24 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR cpow (),
+.BR cpowf (),
+.BR cpowl ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99.
 .SH SEE ALSO
